--- a/index.html
+++ b/index.html
@@ -472,9 +472,8 @@
                 </ul>
                 <h4 style="margin-top: 15px;">Locations</h4>
                 <ul class="links">
-                    <li class="address1"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> Kolathur
-                            ramankulam-
-                            Malappuram Dt</a></li>
+                    <li class="address1"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
+                            Nairobi-cbd</a></li>
                     <li class="address2"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> MG Road,
                             Bangalore - Karnataka</a></li>
                     <li class="address3"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
