--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
 
     <!-- Preloader -->
@@ -70,36 +72,51 @@
         <h3>We’ve got cones of wisdom for your burning questions!</h3>
         <br />
         <div class="FAQ">
-            <button class="FAQ-questions">WILL MY ICE CREAM MELT BEFORE IT ARRIVES? <i class="fa-solid fa-chevron-down"></i></button>
-            <div class="FAQ-answers">Don’t worry, your ice cream is on a chill mission! We pack it to stay cool, so it’ll arrive frozen and ready to enjoy.</div>
+            <button class="FAQ-questions">WILL MY ICE CREAM MELT BEFORE IT ARRIVES? <i
+                    class="fa-solid fa-chevron-down"></i></button>
+            <div class="FAQ-answers">Don’t worry, your ice cream is on a chill mission! We pack it to stay cool, so
+                it’ll arrive frozen and ready to enjoy.</div>
         </div>
         <div class="FAQ">
-            <button class="FAQ-questions">I'M UNHAPPY WITH THE SERVICE, WHO SHOULD I TALK TO? <i class="fa-solid fa-chevron-down"></i></button>
-            <div class="FAQ-answers">We’re sorry your experience wasn’t as sweet as our ice cream! Please reach out to our support team, and we’ll make things right quicker than you can say ‘sundae.</div>
+            <button class="FAQ-questions">I'M UNHAPPY WITH THE SERVICE, WHO SHOULD I TALK TO? <i
+                    class="fa-solid fa-chevron-down"></i></button>
+            <div class="FAQ-answers">We’re sorry your experience wasn’t as sweet as our ice cream! Please reach out to
+                our support team, and we’ll make things right quicker than you can say ‘sundae.</div>
         </div>
         <div class="FAQ">
-            <button class="FAQ-questions">WHAT ARE YOUR DELIVERY HOURS? <i class="fa-solid fa-chevron-down"></i></button>
-            <div class="FAQ-answers">We deliver ice cream every day from 10am to 11 pm. Availability may vary by location.</div>
+            <button class="FAQ-questions">WHAT ARE YOUR DELIVERY HOURS? <i
+                    class="fa-solid fa-chevron-down"></i></button>
+            <div class="FAQ-answers">We deliver ice cream every day from 10am to 11 pm. Availability may vary by
+                location.</div>
         </div>
         <div class="FAQ">
-            <button class="FAQ-questions">IS THERE A MINIMUM ORDER AMOUNT? <i class="fa-solid fa-chevron-down"></i></button>
+            <button class="FAQ-questions">IS THERE A MINIMUM ORDER AMOUNT? <i
+                    class="fa-solid fa-chevron-down"></i></button>
             <div class="FAQ-answers">Yes, the minimum order amount is 100 to ensure smooth delivery.</div>
         </div>
         <div class="FAQ">
-            <button class="FAQ-questions">CAN I CANCEL OR MODIFY MY ORDER AFTER IT’S PLACED? <i class="fa-solid fa-chevron-down"></i></button>
-            <div class="FAQ-answers">Once your order is placed, changes or cancellations may not be possible depending on how far along it is in the process. Check with the delivery platform for their policies.</div>
+            <button class="FAQ-questions">CAN I CANCEL OR MODIFY MY ORDER AFTER IT’S PLACED? <i
+                    class="fa-solid fa-chevron-down"></i></button>
+            <div class="FAQ-answers">Once your order is placed, changes or cancellations may not be possible depending
+                on how far along it is in the process. Check with the delivery platform for their policies.</div>
         </div>
         <div class="FAQ">
-            <button class="FAQ-questions">DO YOU OFFER ANY DISCOUNTS OR PROMOTIONS? <i class="fa-solid fa-chevron-down"></i></button>
-            <div class="FAQ-answers">Yes, we occasionally offer discounts and promotions. Keep an eye on our website or delivery app for the latest deals!</div>
+            <button class="FAQ-questions">DO YOU OFFER ANY DISCOUNTS OR PROMOTIONS? <i
+                    class="fa-solid fa-chevron-down"></i></button>
+            <div class="FAQ-answers">Yes, we occasionally offer discounts and promotions. Keep an eye on our website or
+                delivery app for the latest deals!</div>
         </div>
         <div class="FAQ">
-            <button class="FAQ-questions">CAN I CUSTOMIZE MY ICE CREAM ORDER? <i class="fa-solid fa-chevron-down"></i></button>
-            <div class="FAQ-answers">At the moment, customization options like adding toppings are not available for delivery orders. Stay tuned for updates!</div>
+            <button class="FAQ-questions">CAN I CUSTOMIZE MY ICE CREAM ORDER? <i
+                    class="fa-solid fa-chevron-down"></i></button>
+            <div class="FAQ-answers">At the moment, customization options like adding toppings are not available for
+                delivery orders. Stay tuned for updates!</div>
         </div>
         <div class="FAQ">
-            <button class="FAQ-questions">DO YOU HAVE VEGAN OR DAIRY-FREE OPTIONS? <i class="fa-solid fa-chevron-down"></i></button>
-            <div class="FAQ-answers">Yes, we offer a variety of vegan and dairy-free ice cream options. Availability may vary by location.</div>
+            <button class="FAQ-questions">DO YOU HAVE VEGAN OR DAIRY-FREE OPTIONS? <i
+                    class="fa-solid fa-chevron-down"></i></button>
+            <div class="FAQ-answers">Yes, we offer a variety of vegan and dairy-free ice cream options. Availability may
+                vary by location.</div>
         </div>
     </section>
 
@@ -138,9 +155,8 @@
                 </ul>
                 <h4 style="margin-top: 15px;">Locations</h4>
                 <ul class="links">
-                    <li class="address1"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> Kolathur
-                            ramankulam-
-                            Malappuram Dt</a></li>
+                    <li class="address1"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
+                            Nairobi-cbd</a></li>
                     <li class="address2"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> MG Road,
                             Bangalore - Karnataka</a></li>
                     <li class="address3"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
@@ -208,12 +224,5 @@
     <script src="script/FAQ.js"></script>
     <script src="script/topscrollindicator.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
