--- a/delivery.html
+++ b/delivery.html
@@ -186,8 +186,8 @@
                 <ul class="links">
                     <li class="address1"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
                             Nairobi-cbd</a></li>
-                    <li class="address2"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> MG Road,
-                            Bangalore - Karnataka</a></li>
+                    <li class="address2"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
+                            Kisumu-town</a></li>
                     <li class="address3"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
                             Connaught Place, New Delhi</a></li>
                     <li class="address4"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> Park
