--- a/dine-in.html
+++ b/dine-in.html
@@ -210,7 +210,7 @@
                     <li class="address2"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
                             Kisumu-town</a></li>
                     <li class="address3"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
-                            Connaught Place, New Delhi</a></li>
+                            Mombasa</a></li>
                     <li class="address4"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> Park
                             Street, Kolkata - West Bengal</a></li>
 
