--- a/catering.html
+++ b/catering.html
@@ -203,8 +203,8 @@
                             Kisumu-town</a></li>
                     <li class="address3"><a href="" class="social"><i class="fa-solid fa-location-dot"></i>
                             Mombasa</a></li>
-                    <li class="address4"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> Park
-                            Street, Kolkata - West Bengal</a></li>
+                    <li class="address4"><a href="" class="social"><i class="fa-solid fa-location-dot"></i> Machakos
+                        </a></li>
 
                     </li>
 
