--- a/dine-in.html
+++ b/dine-in.html
@@ -223,7 +223,7 @@
                 <ul class="links">
                     <li><a href="" class="social"><i class="fa-solid fa-phone"></i> +91 90904500112</a></li>
                     <li><a href="" class="social"><i class="fa-solid fa-phone"></i> +91 90904500112</a></li>
-                    <li><a href="" class="social"><i class="fa-solid fa-envelope"></i> mail@1234567.com</a></li>
+                    <li><a href="" class="social"><i class="fa-solid fa-envelope"></i> dennis@dennisnzioki.com</a></li>
                 </ul>
                 <h4 style="margin-top: 15px;">Follow Us</h4>
                 <ul class="links">
