--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
                     </li>
                     <li><a href="tel:90904500112" class="social"><i class="fa-solid fa-phone"></i> +254 717783146</a>
                     </li>
-                    <li><a href="mailto:mail@1234567.com" class="social"><i class="fa-solid fa-envelope"></i>
-                            mail@1234567.com</a></li>
+                    <li><a href="mailto:dennis@dennisnzioki.com" class="social"><i class="fa-solid fa-envelope"></i>
+                            dennis@dennisnzioki.com</a></li>
                 </ul>
                 <h4 style="margin-top: 15px;">Follow Us</h4>
                 <ul class="links">
