--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
     <a href="./index.html">
 
         <div id="logo">
-            <img src="https://github.com/DharshiBalasubramaniyam/ice-cream-parlour-website/blob/master/images/logo.png?raw=true"
+            <img src="https://github.com/DNX EMPIREalasubramaniyam/ice-cream-parlour-website/blob/master/images/logo.png?raw=true"
                 width="15%"></img>
         </div>
     </a>
