--- a/products.html
+++ b/products.html
@@ -177,7 +177,7 @@
 
     <!-- copyright -->
     <div class="copyright">
-        &copy; 2024 by <span>DharshiB</span> | All Rights Deserved
+        &copy; 2024 by <span>DNX EMPIRE</span> | All Rights Deserved
     </div>
 
     </div>
