--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     <a href="./index.html">
 
         <div id="logo">
-            <img src="https://github.com/DharshiBalasubramaniyam/ice-cream-parlour-website/blob/master/images/logo.png?raw=true"
+            <img src="https://github.com/DNX EMPIREalasubramaniyam/ice-cream-parlour-website/blob/master/images/logo.png?raw=true"
                 width="15%"></img>
         </div>
     </a>
@@ -70,4 +70,5 @@
     <script src="./script/nav.js"></script>
     <script src="./script/topscrollindicator.js"></script>
 </body>
+
 </html>
