--- a/delivery.html
+++ b/delivery.html
@@ -234,7 +234,7 @@
 
     <!-- copyright -->
     <div class="copyright">
-        &copy; 2024 by <span>DharshiB</span> | All Rights Deserved
+        &copy; 2024 by <span>DNX EMPIRE</span> | All Rights Deserved
     </div>
 
     <script src="./script/nav.js"></script>
